test/src/declarator/scenarios/ok/input/function1.h
#pragma once

#include <TS.h>
#include <std/tsnumber.h>

TS_EXPORT Number* getNumber();
